# fast-delete

./: ._.git  ._.gitignore  ._src  ._target  Cargo.toml  Readme.md  TODO.md  bench.sh  performance.md  test_data_gen.sh
.github/workflows/: buildAndTest.yml
src/: ._main.rs  lib.rs  main.rs  thread_pool.rs
