[package]
name = "fast_delete"
description = "Faster file deletion written in Rust, alternative to rm"
version = "0.1.0"
edition = "2021"
authors = ["Himanshu <hyattherate2005@gmail.com>"]
homepage = "https://github.com/Himasnhu-AT/frm/blob/master/Readme.md"
readme = "Readme.md"
repository = "https://github.com/Himasnhu-AT/frm.git"
keywords = ["linux", "dev-tool", "cli", "file-deletion"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
license-file = "LICENSE"

[dependencies]
walkdir = "2.4"
rayon = "1.8"
indicatif = "0.17"
num_cpus = "1.16.0"

[[bin]]
name = "frm"
path = "src/main.rs"
